update layout to match mocks and fix phone number wrapping

--- a/apps/site/assets/css/_global-navigation.scss
+++ b/apps/site/assets/css/_global-navigation.scss
@@ -303,6 +303,7 @@ nav.m-menu--desktop {
 
 .m-menu__feature_phone {
   padding-top: $space-3_new;
+  white-space: normal;
 
   > a {
     font-weight: $font-weight-medium;
